# AutoClassification

./: .env.example  .gitignore  CURRENT_PLAN.md  OVERVIEW.md  PLAN.md  README.md  docker-compose.yml  init.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: AiServer_Build_Test.yml  Front_Build_Test.yml  UserServer_Build_Test.yml  Webhook_Check.yml
AiServer/: .dockerignore  .env  .env.example  .gitignore  Consumer.py  DataProcessor.py  Dockerfile  ImageProcessor.py  Jenkinsfile  RabbitMq.py  app.py  config.py  function_schemas.py  pyproject.toml  requirements-dev.txt  requirements.txt  testPredict.py  testTrain.py  testVal.py  test_fallback.py  test_priority_system.py
AiServer/api/: error_handlers.py  problem_details.py  routes.py
AiServer/config/: __init__.py  base.py  config.py  development.py  production.py  testing.py
AiServer/di/: container.py
AiServer/exceptions/: custom_exceptions.py
AiServer/models/: data_models.py
AiServer/services/: classification_service.py  consumer.py  data_processor.py  image_processor.py  image_service.py  operation_enum.py  rabbitmq_handler.py  sse_manager.py  yolo_service.py
AiServer/tests/: test_api.py  test_classification_service.py  test_data_processor.py  test_rabbitmq_handler.py  test_sse_manager.py  test_yolo_service.py
AiServer/utils/: function_schemas.py  logger.py  rabbitmq_utils.py
UserServer/: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  build.gradle  build.gradle.kts  settings.gradle.kts
UserServer/src/main/resources/: application-dev.yml  application-docker.yml  application-local.yml  application.yml
UserServer/src/test/resources/: application-test.yml  init-test-db.sql
docker-env/: docker-compose.yml
docker-env/jdk-base/: Dockerfile
docker-env/jenkins/: Dockerfile  Jenkinsfile  init.sh  jenkins.yaml  plugins.txt
docker-env/nginx/: Dockerfile  user-front.conf
env-classfiy/: docker-compose.yml
env-classfiy/jdk-base/: Dockerfile
env-classfiy/jenkins/: Dockerfile  generate-ssh-keys.sh  jenkins.yaml  plugins.txt
env-classfiy/nginx/: user-front.conf
front/: .env  .env.development  .env.production  .eslintrc.json  .gitignore  Jenkinsfile  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
front/public/: index.html  manifest.json
front/public/locales/en/: api.json  auth.json  common.json  index.ts  navigation.json  notice.json  test.json  validation.json  workspace.json
front/public/locales/ko/: api.json  auth.json  common.json  index.ts  navigation.json  notice.json  test.json  validation.json  workspace.json
front/src/: App.tsx  Router.tsx  Routers.tsx  setupTests.ts
front/src/component/: BaseField.tsx  BaseInputField.tsx  ClassInputCard.tsx  ExpandComp.tsx  FileDropzone.tsx  Notification.tsx  PageContext.tsx
front/src/component/BaseBoard/: BaseBoard.tsx
front/src/component/BaseTitle/: BaseTitle.tsx
front/src/component/Modal/: AlertModal.tsx
front/src/component/Notification/: AlarmDetail.tsx  Notification.tsx
front/src/component/baseBoard/: BaseBoard.tsx  BaseSearch.tsx  BaseTable.tsx  BaseTitle.tsx
front/src/component/baseEditor/: BaseEditor.tsx  EditorContext.tsx  TextEditor.tsx
front/src/component/imgs/: ImageCard.tsx  LabelledImageCard.tsx  LabelledImages.tsx
front/src/component/modal/: AlertModal.tsx  MemberSearchModal.tsx
front/src/component/notification/: AlarmDetail.tsx  Notification.tsx
front/src/component/textEditor/: TextEditor.tsx
front/src/components/: ApiInterceptorProvider.tsx  BaseField.tsx  BaseInputField.tsx  ClassInputCard.tsx  ExpandComp.tsx  FileDropzone.tsx  withTranslation.tsx
front/src/hooks/: hooks.ts  index.ts  useLanguage.ts  useLocalizedRouting.ts  useMenuItems.ts  useMenuItems.tsx  useTranslation.ts
front/src/i18n/: TranslationErrorBoundary.tsx  config.ts  hooks.ts  index.ts  init.ts  provider.tsx  types.ts  withI18nInitialization.tsx
front/src/i18n/en/: common.json  (+5 more)
front/src/layouts/: BackGround.tsx  ContentPath.tsx  Layout.tsx  LeftBar.tsx  SubTabBar.tsx  TopBar.tsx
front/src/model/: AlarmModel.ts  GlobalModel.ts  WorkspaceModel.ts
front/src/pages/: Home.tsx  Loading.tsx  NotFound.tsx  SignIn.tsx  SignUp.tsx
front/src/service/: AlarmApi.ts  ApiClient.ts  AuthApi.ts  GlobalApi.ts  NoticeApi.ts  SseClient.ts  TrainApi.ts  authApi.ts
front/src/store/: rootHook.ts  rootSlice.ts  rootStore.ts
front/src/stores/: i18nSlice.ts  rootHook.ts  rootMiddleware.ts  rootSlice.ts  rootStore.ts
front/src/types/: i18n.ts  index.ts
front/src/utils/: CommonUtil.ts  ContextManager.tsx  Util.ts  alert.ts  authUtils.ts  eventBus.ts  i18nUtils.ts  strings.ts
(+386 files in other folders)
